# tugas-besar-1-gdt-1

./: .gitignore  CMakeLists.txt  README.md  makefile  test_config
data/default/: misc.txt  property.txt  railroad.txt  special.txt  tax.txt  utility.txt
data/doubleload/: game_state.txt  log.txt
data/save1/: game_state.txt  log.txt
doc/ClassDiagram/: architecture.puml
doc/ClassDiagram/Board&Tiles/: 1-overview.puml  2-propTile.puml  3-actionTile.puml  4-specialTile.puml
doc/ClassDiagram/Card&Deck/: 1-cardOverview.puml  2-actionCard.puml  3-actionCard.puml  3-skillCard.puml  4-CardDeck.puml  4-cardDeck.puml
doc/ClassDiagram/Data/: 1-ConfigLoader.puml  2-SaveLoadManager.puml  3-TransactionLogger.puml
doc/ClassDiagram/Exception/: 1-gameExceptionOverview.puml
doc/ClassDiagram/GUI Layer/: 1-GUIRenderer.puml  1-viewOverview.puml
doc/ClassDiagram/GameEngine(Main)/: 0-GameEngine.puml  1-Game.puml  2-CommandProcessor.puml  3-AuctionManager.puml  4-BankruptcyManager.puml  5-DiceManager.puml  6-TurnManager.puml
doc/ClassDiagram/Player/: 1-playerOverview.puml
doc/ClassDiagram/Property/: 1-propertyOverview.puml
include/core/: AuctionManager.hpp  BankruptcyManager.hpp  CommandProcessor.hpp  Game.hpp  GameEngine.hpp  SaveLoadManager.hpp  TurnManager.hpp
include/exception/: GameException.hpp  InvalidEntryInputException.hpp  InvalidFileException.hpp  PlayerTurnException.hpp
include/exception/InvalidEntryInput/: InvalidDiceNumberException.hpp  InvalidTileException.hpp
include/exception/InvalidFile/: FailedToSaveException.hpp  FileNotFoundException.hpp  InvalidConfigException.hpp  UnreadableFileException.hpp
include/exception/PlayerTurn/: InvalidTurnException.hpp  PropertyManagementException.hpp  SkillTurnException.hpp
include/exception/PlayerTurn/PropertyManagement/: ExistingHotelException.hpp  InsufficientMoneyException.hpp  InsufficientOwnedColorException.hpp  PropertyNotMortgagedException.hpp
include/exception/PlayerTurn/SkillTurn/: DiceAlreadyRolledException.hpp  SkillCardUsedException.hpp
include/models/BoardAndTiles/: ActionTile.hpp  Board.hpp  PropertyTile.hpp  SpecialTile.hpp  Tile.hpp  TileTypes.hpp
include/models/BoardAndTiles/ActionTile/: ChanceTile.hpp  CommunityChestTile.hpp  FestivalTile.hpp  TaxTile.hpp
include/models/BoardAndTiles/PropertyTile/: RailroadTile.hpp  StreetTile.hpp  UtilityTile.hpp
include/models/BoardAndTiles/SpecialTile/: FreeParkingTile.hpp  GoTile.hpp  GoToJailTile.hpp  JailTile.hpp
include/models/CardAndDeck/: ActionCard.hpp  Card.hpp  CardDeck.hpp  ChanceCard.hpp  CommunityChestCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  JailFreeCard.hpp  LassoCard.hpp  MoveCard.hpp  ShieldCard.cpp  ShieldCard.hpp  SkillCard.hpp  TeleportCard.cpp  TeleportCard.hpp
include/models/Player/: Player.cpp  Player.hpp
include/models/Property/: Property.cpp  Property.hpp  RailroadProperty.cpp  RailroadProperty.hpp  StreetProperty.cpp  StreetProperty.hpp  UtilityProperty.cpp  UtilityProperty.hpp
include/utils/: Command.hpp
include/utils/Data/: ConfigLoader.hpp
include/utils/data/: ConfigLoader.hpp  GameConfig.hpp  LogEntry.hpp  TransactionLogger.hpp
include/views/: CLIGUI.hpp  GUI.hpp  GUI2.hpp  IGUI.hpp
include/views/animation/: ViewAnimation.hpp
include/views/animation/camera/: CameraManager.hpp  CameraMovement.hpp  View3DCamera.hpp
include/views/animation/physicsEngine/: PhysicsEngine.hpp  PhysicsObject.hpp
include/views/viewElement/: AuctionMenuView.hpp  Entry.hpp  GameHUDView.hpp  Interactable.hpp  MenuView.hpp  PlayerProfileView.hpp  Popup.hpp  View2D.hpp  View3D.hpp
include/views/viewElement/board/: BoardView.hpp  TileView.hpp
include/views/viewElement/cards/: CardPileView.hpp  CardView.hpp  SkillHandView.hpp
include/views/viewElement/player/: DiceView.hpp  PlayerInventory.hpp  PlayerProfileView.hpp  PlayerView.hpp
src/core/: AuctionManager.cpp  BankruptcyManager.cpp  CommandProcessor.cpp  Game.cpp  GameEngine.cpp  SaveLoadManager.cpp  TurnManager.cpp  main.cpp  mainGUI.cpp
src/exception/: GameException.cpp  InvalidEntryInputException.cpp  InvalidFileException.cpp  PlayerTurnException.cpp
src/exception/InvalidEntryInput/: InvalidDiceNumberException.cpp  InvalidTileException.cpp
src/exception/InvalidFile/: FailedToSaveException.cpp  FileNotFoundException.cpp  InvalidConfigException.cpp  UnreadableFileException.cpp
src/exception/PlayerTurn/: InvalidTurnException.cpp  PropertyManagementException.cpp  SkillTurnException.cpp
src/exception/PlayerTurn/PropertyManagement/: ExistingHotelException.cpp  InsufficientMoneyException.cpp  InsufficientOwnedColorException.cpp  PropertyNotMortgagedException.cpp
src/exception/PlayerTurn/SkillTurn/: DiceAlreadyRolledException.cpp  SkillCardUsedException.cpp  SkillCardUsedException.hpp
src/models/: Board.cpp
src/models/BoardAndTiles/: ActionTile.cpp  Board.cpp  PropertyTile.cpp  SpecialTile.cpp  Tile.cpp
src/models/BoardAndTiles/ActionTile/: ChanceTile.cpp  CommunityChestTile.cpp  FestivalTile.cpp  TaxTile.cpp
src/models/BoardAndTiles/PropertyTile/: RailroadTile.cpp  StreetTile.cpp  UtilityTile.cpp
src/models/BoardAndTiles/SpecialTile/: FreeParkingTile.cpp  (+3 more)
src/models/CardAndDeck/: ActionCard.cpp  Card.cpp  ChanceCard.cpp  CommunityChestCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  JailFreeCard.cpp  LassoCard.cpp  MoveCard.cpp  ShieldCard.cpp  SkillCard.cpp  TeleportCard.cpp
src/models/Player/: Player.cpp
src/models/Property/: Property.cpp  RailroadProperty.cpp  StreetProperty.cpp  UtilityProperty.cpp
src/utils/: Data.cpp  Data.hpp
src/utils/Data/: ConfigLoader.cpp
src/utils/data/: ConfigLoader.cpp  LogEntry.cpp  TransactionLogger.cpp
src/views/: CLIGUI.cpp  GUI.cpp  GUI2.cpp  GUITest.cpp  ThrowDice.cpp  ViewTesting.cpp
src/views/animation/: ViewAnimation.cpp
src/views/physicsEngine/: PhysicsEngine.cpp  PhysicsObject.cpp  PhysicsObject.hpp
src/views/viewElement/: AuctionMenuView.cpp  Entry.cpp  GameHUDView.cpp  Interactable.cpp  MenuView.cpp  PlayerProfileView.cpp  Popup.cpp  View2D.cpp  View3D.cpp  View3D.hpp
tests/: test_config.cpp
(+19 files in other folders)
